--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,18 @@
     "files.associations": {
         "*.rs": "rust"
     },
+    "emmet.includeLanguages": {
+        "rust": "html",
+        "*.rs": "html"
+    },
+    "tailwindCSS.includeLanguages": {
+        "rust": "html",
+        "*.rs": "html"
+    },
+    "editor.quickSuggestions": {
+        "other": "on",
+        "comments": "on",
+        "strings": true
+    },
+    "css.validate": false
 }
